# my-teams-app

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py  state.py
backend/app/api/: __init__.py  auth.py  health.py  me.py  teams.py
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/mockdata/: __init__.py  fixtures.py
backend/app/schemas/: __init__.py  auth.py  fixture.py  me.py  team.py
backend/app/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_me.py  test_teams.py
mobile/: .eslintrc.json  README.md  package-lock.json  package.json
mobile/app/: _layout.tsx  config.ts  index.tsx  login.tsx  register.tsx  search.tsx
mobile/app/api/: client.ts
mobile/app/context/: AuthContext.tsx
mobile/app/types/: index.ts
